--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,22 @@
-
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/openairdb
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.defer-datasource-initialization = true
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+server.port = 8081
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = ursaminor1777@gmail.com
+spring.mail.password: tim40.Isa
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+mail.smtp.debug = true
+custom.addr = http://localhost
+custom.fport = 8080
