--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
-logging.level.liquibase = INFO
+#spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
+#logging.level.liquibase = INFO
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/openairdb
 spring.datasource.username=postgres
 spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.defer-datasource-initialization = false
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.defer-datasource-initialization = true
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.initialization-mode=always
