--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -76,6 +76,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
