--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 #spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.defer-datasource-initialization = false
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
