Two roles in preauthorize and task list by employeeId

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.mail.properties.mail.smtp.starttls.enable = true
 mail.smtp.debug = true
 custom.addr = http://localhost/
 custom.fport = 8080
+cloud.aws.credentials.access-key= ''
+cloud.aws.credentials.secret-key= ''
+cloud.aws.region.static= ''
+application.bucket.name = ''
