--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,7 +23,12 @@ spring.mail.properties.mail.smtp.starttls.enable = true
 mail.smtp.debug = true
 custom.addr = http://localhost/
 custom.fport = 8080
-cloud.aws.credentials.access-key= ''
-cloud.aws.credentials.secret-key= ''
-cloud.aws.region.static= ''
-application.bucket.name = ''
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2MB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+cloud.aws.credentials.access-key=AKIAUZSJBCDGEK4TICS2
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=eu-central-1
+cloud.aws.stack.auto=false
+application.bucket.name=nistagramstorage
