--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,6 +14,15 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.default_schema=public
 server.port = 8081
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2MB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+cloud.aws.credentials.access-key=AKIAUZSJBCDGEK4TICS2
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=eu-central-1
+cloud.aws.stack.auto=false
+application.bucket.name=nistagramstorage
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.username = ursaminor1777@gmail.com
