--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.12.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.8</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
