--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.jpa.properties.hibernate.default_schema=public
 server.port = 8081
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = ursaminor1777@gmail.com
-spring.mail.password = tim40.Isa
+spring.mail.username = pcserviskac@gmail.com
+spring.mail.password = VolvoTruck123
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 mail.smtp.debug = true
