--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,3 +32,4 @@ cloud.aws.credentials.secret-key=K0bP7wLm7aelmyy+I7wacio6dqOk71kxvOE6lO/o
 cloud.aws.region.static=eu-central-1
 cloud.aws.stack.auto=false
 application.bucket.name=nistagramstorage
+exchangeratesapi.token=b6020496acea6ff6c2fa3949ae1f7468
